fix: fix gaps

--- a/source/sass/commons/variables.scss
+++ b/source/sass/commons/variables.scss
@@ -34,4 +34,4 @@ $services-icon-size: 55px;
 
 $works-item-width: 220px;
 $works-item-height: 187px;
-$works-gap: 10px;
+$works-gap: 20px;
